feat: all laws view

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
       content="Construcción y arquitectura" />
     <meta name="keywords"
       content="Construcción y arquitectura" />
-    <meta property="og:title" content="Lawgorithm" />
+    <meta property="og:title" content="Lawgarithm" />
     <meta property="og:type" content="website" />
     <meta property="og:description"
       content="Construcción y arquitectura" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="Lawgorithm" />
-    <meta property="twitter:title" content="Lawgorithm" />
+    <meta property="og:site_name" content="Lawgarithm" />
+    <meta property="twitter:title" content="Lawgarithm" />
     <meta property="twitter:description"
       content="Construcción y arquitectura" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Lawgorithm</title>
+    <title>Lawgarithm</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
